// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown todo parsing empty list 2`] = `
{
  "content": [
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "first",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo1.md: an incorrectly indented doc results in empty list 1`] = `
{
  "content": [
    {
      "attrs": {
        "tight": false,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo2.md: correct indentation of todo1 1`] = `
{
  "content": [
    {
      "attrs": {
        "tight": false,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "top",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": false,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "parent",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "attrs": {
                        "tight": false,
                      },
                      "content": [
                        {
                          "attrs": {
                            "todoChecked": false,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "top",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                        {
                          "attrs": {
                            "todoChecked": false,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "parent",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                            {
                              "attrs": {
                                "tight": false,
                              },
                              "content": [
                                {
                                  "attrs": {
                                    "todoChecked": null,
                                  },
                                  "content": [
                                    {
                                      "content": [
                                        {
                                          "text": "first",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                                {
                                  "attrs": {
                                    "todoChecked": null,
                                  },
                                  "content": [
                                    {
                                      "content": [
                                        {
                                          "text": "second",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                              ],
                              "type": "bulletList",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "bottom",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo3.md: malformed with multiple confused square braces 1`] = `
"- [ ] unchecked todo item 1
- \\[ \\]
- \\[  \\] not a todo item 2
- \\[ x\\] not a todo item 3
- \\[x \\] not a todo item 4
- \\[ x \\] not a todo item 5
- [x] todo item 6"
`;

exports[`Markdown todo parsing todo3.md: malformed with multiple confused square braces 2`] = `
{
  "content": [
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "unchecked todo item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "[ ]",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "[  ] not a todo item 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "[ x] not a todo item 3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "[x ] not a todo item 4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "[ x ] not a todo item 5",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": true,
          },
          "content": [
            {
              "content": [
                {
                  "text": "todo item 6",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo4.md multiple nesting 1`] = `
"- [ ] top
  - [ ] Zono
  - [ ] Banshe
  - [ ] parent
    - [ ] top
    - [ ] parent
      - first
      - second
  - [ ] bottom"
`;

exports[`Markdown todo parsing todo4.md multiple nesting 2`] = `
{
  "content": [
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "top",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "Zono",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "Banshe",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "parent",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "attrs": {
                        "tight": true,
                      },
                      "content": [
                        {
                          "attrs": {
                            "todoChecked": false,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "top",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                        {
                          "attrs": {
                            "todoChecked": false,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "parent",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                            {
                              "attrs": {
                                "tight": true,
                              },
                              "content": [
                                {
                                  "attrs": {
                                    "todoChecked": null,
                                  },
                                  "content": [
                                    {
                                      "content": [
                                        {
                                          "text": "first",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                                {
                                  "attrs": {
                                    "todoChecked": null,
                                  },
                                  "content": [
                                    {
                                      "content": [
                                        {
                                          "text": "second",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                              ],
                              "type": "bulletList",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "bottom",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo5.md no nesting 1`] = `
"- [ ] unchecked item 1
- [ ] unchecked item 2
- [x] checked item 3
- [ ] unchecked item 4"
`;

exports[`Markdown todo parsing todo5.md no nesting 2`] = `
{
  "content": [
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "unchecked item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "unchecked item 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": true,
          },
          "content": [
            {
              "content": [
                {
                  "text": "checked item 3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "unchecked item 4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo6.md todo a child of ordered and unordered 2`] = `
"# Test 1

1. foo
   - [ ] nested unchecked item 1
   - not a todo item 2
   - not a todo item 3
   - [x] nested checked item 4
2. bar
3. spam

# Test 2

- foo
  - [ ] nested unchecked item 1
  - [ ] nested unchecked item 2
  - [x] nested checked item 3
  - [x] nested checked item 4"
`;

exports[`Markdown todo parsing todo6.md todo a child of ordered and unordered 3`] = `
{
  "content": [
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 1",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "order": 1,
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "bar",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "spam",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": null,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo7.md todo a child of ordered and unordered 1`] = `
{
  "content": [
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 1",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "bar",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "spam",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 3",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "bar",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "spam",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "attrs": {
                        "tight": true,
                      },
                      "content": [
                        {
                          "attrs": {
                            "todoChecked": null,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "a child of list 3",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Markdown todo parsing todo7.md todo a child of ordered and unordered 2`] = `
"# Test 1

- [ ] foo
  - [ ] nested unchecked item 1
  - not a todo item 2
  - not a todo item 3
  - [x] nested checked item 4
- [ ] bar
- [ ] spam

# Test 2

- [ ] foo
  - [ ] nested unchecked item 1
  - [ ] nested unchecked item 2
  - [x] nested checked item 3
  - [x] nested checked item 4

# Test 3

- [ ] foo
  - [ ] nested unchecked item 1
  - not a todo item 2
  - not a todo item 3
  - [x] nested checked item 4
- [ ] bar
- [ ] spam
  - regular list 1
  - regular list 2
  - regular list 3
    - a child of list 3"
`;

exports[`Markdown todo parsing todo7.md todo a child of ordered and unordered 3`] = `
{
  "content": [
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 1",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "bar",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "spam",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "collapseContent": null,
        "level": 1,
      },
      "content": [
        {
          "text": "Test 3",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "tight": true,
      },
      "content": [
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "foo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": false,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested unchecked item 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "not a todo item 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": true,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "nested checked item 4",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "bar",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "attrs": {
            "todoChecked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "spam",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "tight": true,
              },
              "content": [
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "attrs": {
                    "todoChecked": null,
                  },
                  "content": [
                    {
                      "content": [
                        {
                          "text": "regular list 3",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "attrs": {
                        "tight": true,
                      },
                      "content": [
                        {
                          "attrs": {
                            "todoChecked": null,
                          },
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "a child of list 3",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;
